# waterkotte-easycon

./: .gitignore  LICENSE  README.md  out.txt  pyproject.toml
src/easycon/: __init__.py  __main__.py  const.py  data.xml  dictionary.py  easycon.py  variables.csv
src/waterkotte_easycon/: __init__.py  __main__.py  easycon.py  variables.ini
tests/: test_easycon.py
tests/fixtures/: alarms.csv  hpTypes.csv  testdata.xml
