[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waterkotte-easycon"
version = "1.0.1"
description = "Wrapper to communicate with Waterkotte heatpumps running EasyCon"
readme = "README.md"
authors = [{ name = "Christian Erhardt", email = "christian.erhardt@mojo2k.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["waterkotte", "easycon"]
dependencies = ['aiohttp', 'asyncio']
requires-python = ">=3.7"

    [project.optional-dependencies]
    build = ["build", "twine"]
    dev   = ["black", "bumpver", "isort", "mypy", "pytest"]

    [project.scripts]
    realpython = "reader.__main__:main"

    [project.urls]
    repository    = "https://github.com/MoJo2600/waterkotte-easycon"
    documentation = "https://github.com/MoJo2600/waterkotte-easycon"


[tool.bumpver]
current_version = "1.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "src/easycon/__init__.py" = ["{version}"]
    "src/easycon/__main__.py" = ["- realpython-reader v{version}"]

[tool.isort]
profile                   = "black"
import_heading_stdlib     = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Reader imports"

[tool.mypy]
strict = true

    [[tool.mypy.overrides]]
    module                 = "easycon"
    ignore_missing_imports = true